[metadata]
name = slem-learn
version = 0.0.14
author = Matthew J. Vowels
description = Super Learner Equation Modeling Package
platforms = linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = slem
package_dir =
    slem=src/slem
install_requires =
    numpy>=1.20.0
    scikit-learn
    scipy
    networkx
    pandas
    tqdm
    matplotlib
python_requires = >=3.6
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
slem = py.typed

[flake8]
max-line-length = 160